# nfc-attender

./: .gitignore  CLAUDE.md  README_SCHEDULER.md  build-windows.sh  package.json  pnpm-lock.yaml
.github/: RELEASE_INSTRUCTIONS.md
.github/workflows/: release-windows.yml  release.yml  test-build.yml
docs/: AUTO_UPDATER_GUIDE.md  USER_GUIDE.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/__tests__/: check-learner-in.test.ts  pb-client.test.ts  useNfcLearner.test.ts
src/app/: globals.css  layout.tsx  page.tsx  pb.ts
src/app/api/trpc/[trpc]/: route.ts
src/app/components/: Account.tsx  ActivityFeed.tsx  AttendanceHistory.tsx  CreateLearnerModal.tsx  LearnerCard.tsx  UpdateNotification.tsx
src/app/history/: page.tsx
src/app/hooks/: useNfcLearner.ts
src/app/utils/: format.tsx  utils.ts
src/lib/: pb-client.ts  trpc.tsx
src/server/: root.ts  trpc.ts
src/server/routers/: attendance.ts  learners.ts
tools/enroll/: Cargo.toml
tools/enroll/src/: main.rs
