[package]
name = "nfc-enroll"
version = "0.1.0"
description = "CLI tool to enroll NFC cards and create learners in PocketBase"
edition = "2021"

[dependencies]
pcsc = "2.9.0"
hex = "0.4.3"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
